# object-detector

./: CMakeLists.txt  README.md  compile.sh  detect.sh  detect2d.cpp  install-dependencies.sh  yolo.cpp  yolo.hpp
weights/: best.mapping  best.xml
